# QPSolvers

./: README.md  setPath.m  swigNotes.txt
ALM/: ALMFilter.h  ALMqp.h  Armijo.h  CMakeLists.txt  ConjugateQP.h  DirectQP.h  EigenSparseSolve.cpp  EigenSparseSolve.h  Function.h  GradProj.h  MUMPSSupport  MUMPSSupport.h  NewtonALM.h  NewtonLS.h  NewtonTR.h  Solver.h  SteihaugCG.h  alm_bound.h  almbound.cpp  bfgs.h  conjugated_gradient_descent.h  function.h  gradient_descent.h  lbfgs.h  lbfgsb.h  main.cpp  newton_descent.h  notes.txt  qpAL.cpp  simple.cc  solver.h  speye.h  testQP.m  testQPs.m
ALM/cmake/: FindMATLAB.cmake  FindMKL.cmake  FindMUMPS.cmake  FindOCTAVE.cmake
ALM/prototypes/: gradproj.m  objFunction.m  testQP.m
ALM/prototypes/matlab_impl_constr/: implicit_constraints.html
ALM/prototypes/matlab_impl_constr/burgers/: H0vec.m  Hessvec.m  optimization_driver.m
ALM/prototypes/matlab_impl_constr/optimization/: alm.asv  alm.m  deriv_check.m  newton_cg.m
ALM/prototypes/matlab_impl_constr/rosenbrock/: H0vec.m  Hessvec.m  fval.m  grad.m  optimization_driver.m  xnew.m  xprod.m
ALM/prototypes/opt/: DDs.m  Fquadg.m  Frosenbrockg.m  astrcg.m  astrcgg.m  astrdl.m  astrdlg.m  astrpcg.m  cholincinit.m  cholincprec.m  fgHminsurf.m  runminsurfTRASCG.m  runminsurfTRASDL.m  runminsurfTRASPCG.m  runminsurfTRCG.m  runminsurfTRDL.m  runminsurfTRPCG.m  runquadTRASCGg.m  runquadTRASDLg.m  runrosenTRASCGg.m  runrosenTRASCGg.m~  runrosenTRCG.m  runrosenTRCGg.m  runrosenTRDL.m  runrosenTRDLg.m  solvetrascg.m  solvetrasdl.m  solvetraspcg.m  solvetraspcg.m~  solvetrcg.m  solvetrdl.m  solvetrpcg.m  ssorinit.m  ssorprec.m  trcg.m  trcgg.m  trdl.m  trdlg.m  trpcg.m
ALM/swig/: CMakeLists.txt  qpAL.cpp  qpAL.i
FilterQP/: note.txt
GRG/prototype/: constraint.m  constraintg.m  correctH.m  gradient.m  homework4.m  lineSearch.m  report.m  rosenbrock.m  rosenbrockH.m  rosenbrockg.m  solveh.m
LinearSolvers/: testMumps.m
MatlabMexAPI/: mexDriver.m  mexWorkspaceDemo.cpp  notes.txt
boxqp/: boxqp.m  example.m  note.txt
ggael/: note.txt
qpip/: note.txt
yyye/: notes.txt  solnp.m  spphase2.m  spsolqp.m  subnp.m
